--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -28,9 +28,10 @@
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
         import { getAuth, updatePassword } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
-        import { firebaseConfig } from '/static/js/firebase-config.js';
+        import { loadFirebaseConfig } from '/static/js/firebase-config.js';
 
         // Initialize Firebase
+        const firebaseConfig = await loadFirebaseConfig();
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
